zokrates_cli/examples/error/shadowing.zok
def foo() -> field:
	return 1

def main() -> field:
	field a = 2
	field a = foo()
	return 1